<resources>
    <string name="app_name">andFHEM</string>
    <string name="roomTitlePrefix">Room</string>
    <string name="allRoomsTitle">All Rooms</string>
    <string name="deviceDetailPrefix">Details for</string>
    <string name="unsortedRoomName">unsorted</string>
    <string name="deviceName">Name</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="rain">Rain</string>
    <string name="humidity">Humidity</string>
    <string name="actuator">Actuator</string>
    <string name="state">State</string>
    <string name="battery">Battery</string>
    <string name="measured">Measured</string>
    <string name="warnings">Warnings</string>
    <string name="time">Time</string>
    <string name="avgDay">Average Day</string>
    <string name="avgMonth">Average Month</string>
    <string name="isRaining">Is Raining?</string>
    <string name="desiredTemperature">Desired Temperature</string>
    <string name="forecast">Forecast</string>
    <string name="pressure">Pressure</string>
    <string name="dewpoint">Dewpoint</string>
    <string name="rainRate">Rain Rate</string>
    <string name="rainTotal">Rain Total</string>
    <string name="windAvgSpeed">Wind Avg. Speed</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="windDirection">Wind Direction</string>
    <string name="uvValue">UV Value</string>
    <string name="uvRisk">UV Risk</string>
    <string name="room">Room</string>
    <string name="counterA">Counter A</string>
    <string name="counterB">Counter B</string>
    <string name="present">Present</string>
    <string name="currentUsage">Current Usage</string>
    <string name="dayUsage">Day Usage</string>
    <string name="monthUsage">Month Usage</string>
    <string name="lastStateChange">Last State Change</string>
    <string name="lastState">Last State</string>
    <string name="power">Power</string>
    <string name="audio">Audio</string>
    <string name="input">Input</string>
    <string name="mode">Mode</string>
    <string name="definition">Definition</string>
    <string name="optional">optional</string>
    <string name="regression">regression</string>
    <string name="sum">Sum</string>
    <string name="mac">MAC address</string>
    <string name="ip">IP address</string>
    <string name="wake">Wake</string>
    <string name="howLong">How long?</string>
    <string name="requestRefresh">Request refresh</string>
    <string name="delta">Delta</string>
    <string name="weather">Weather</string>
    <string name="currentWeather">Current Weather</string>
    <string name="weatherForecast">Weather Forecast</string>
    <string name="dimUp">Dim +</string>
    <string name="dimDown">Dim -</string>
    <string name="actions">Model</string>
    <string name="send">Send</string>
    <string name="error">Error!</string>
    <string name="conversion">Conversion</string>
    <string name="hex2quat">Hex -> Quat</string>
    <string name="quat2hex">Quat -> Hex</string>
    <string name="result">Result</string>
    <string name="set_value">Set value</string>
    <string name="floorplan">Floorplan</string>
    <string name="floorplan_move_confirmation">Do you really want to move %1$s to %2$s?</string>
    <string name="android_version">Android Version</string>
    <string name="feature_requires_android_version">This feature requires a minimum Android version of %1$s.</string>
    <string name="unknown">unknown</string>
    <string name="switchDevice">Switch</string>
    <string name="preferences">Preferences</string>
    <string name="update">Update</string>
    <string name="updating">Updating ...</string>
    <string name="loading">Loading ...</string>
    <string name="executing">Executing ...</string>
    <string name="help">Help</string>
    <string name="donate">Donate</string>
    <string name="send_command">Send Command</string>
    <string name="command_execution_result">Command Result</string>
    <string name="context_addtofavorites">Add to favorites</string>
    <string name="context_removefavorite">Remove favorite</string>
    <string name="context_favoriteadded">Favorite was added!</string>
    <string name="context_favoriteremoved">Favorite was removed!</string>
    <string name="context_rename">Rename device</string>
    <string name="context_alias">Set alias</string>
    <string name="context_delete">Delete device</string>
    <string name="context_move">Move device</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="areYouSureText">Are you sure you want to set %1$s to %2$s?</string>
    <string name="setMode">Set Mode</string>
    <string name="tab_roomList">Rooms</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_alldevices">All Devices</string>
    <string name="prefDataSourceCategory">Data Source</string>
    <string name="prefDataSource">Data Source</string>
    <string name="prefOtherPreferencesCategory">Other Preferences</string>
    <string name="prefWidgetCategory">Widgets</string>
    <string name="prefTelnetUrlSummary">i.e. 192.168.0.1 </string>
    <string name="prefTelnetUrl">IP</string>
    <string name="prefTelnetPortSummary">i.e. 7072</string>
    <string name="prefTelnetPort">Port</string>
    <string name="prefFHEMWEBUrl">URL</string>
    <string name="prefFHEMWEBUrlSummary">i.e. http://192.168.0.1:8083/fhem</string>
    <string name="prefUsername">Username</string>
    <string name="prefPassword">Password</string>
    <string name="prefShowHiddenDevices">Show hidden devices</string>
    <string name="prefDefaultTimespan">Graph Timespan</string>
    <string name="prefAutoUpdate">Auto Update</string>
    <string name="prefAutoUpdateSummary">only when application is running</string>
    <string name="prefWidgetRemoteUpdate">Remote Update</string>
    <string name="notNumericError">Not numeric!</string>
    <string name="updateError">Error while updating.</string>
    <string name="timeoutError">Connection timed out.</string>
    <string name="executeError">Error while executing command.</string>
    <string name="updateErrorHostConnection">Cannot connect to host.</string>
    <string name="updateErrorDeviceListParse">Could not parse xml device list.</string>
    <string name="authenticationError">Invalid username or password.</string>
    <string name="graphLoadError">Error while loading graph data.</string>
    <string name="fhemUpdateRequiredError">Please update your FHEM server (updatefhem)</string>
    <string name="prefUrlBeginningError">URL has to start with http!</string>
    <string name="incompleteConfigurationError">Incomplete configuration!</string>
    <string name="okButton">OK</string>
    <string name="cancelButton">Cancel</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="welcomeMessageTitle">Get Started</string>
    <string name="welcomeMessage">
        Go to preferences and insert your FHEM server details.
        \n\nLong click on any item in the device list to add a favorite.
    </string>
    <string name="temperatureGraph">Temperature Graph</string>
    <string name="rainGraph">Rain Graph</string>
    <string name="humidityGraph">Humidity Graph</string>
    <string name="windGraph">Wind Graph</string>
    <string name="actuatorGraph">Actuator Graph</string>
    <string name="pressureGraph">Pressure Graph</string>
    <string name="rainRateGraph">Rain Rate Graph</string>
    <string name="rainTotalGraph">Rain Total Graph</string>
    <string name="usageGraph">Usage Graph</string>
    <string name="windSpeedGraph">Wind Speed Graph</string>
    <string name="yAxisWind">wind (km/h)</string>
    <string name="yAxisHumidity">humidity (%)</string>
    <string name="yAxisTemperature">temperature (°C)</string>
    <string name="yAxisRain">rain (l/m2)</string>
    <string name="yAxisActuator">actuator (%)</string>
    <string name="yAxisPressure">pressure (hPa)</string>
    <string name="yAxisRainRate">rain rate (mm/hr)</string>
    <string name="yAxisRainTotal">rain toal (l/m2)</string>
    <string name="yAxisWindSpeed">wind speed (km/h)</string>
    <string name="yAxisUsage">usage</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="startDateAfterEndDateMsg">Start date has to be before end date</string>
    <string name="optionChangeStartEndDate">Change start or end date</string>
    <string name="generalDetails">General Details</string>
    <string name="plots">Plots</string>
    <string name="switchSetOptions">Switch Set Options</string>
    <string name="deviceRenameSuccess">Device was renamed.</string>
    <string name="deviceDeleteSuccess">Device was deleted.</string>
    <string name="deviceMoveSuccess">Device was moved.</string>
    <string name="deviceAliasSuccess">Alias was set.</string>
    <string name="deviceSwitchSuccess">Device %1$s was switched.</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="manage">Manage</string>
    <string name="timetable">Timetable</string>
    <string name="from1">(1) From</string>
    <string name="from2">(2) From</string>
    <string name="to1">(1) To</string>
    <string name="to2">(2) To</string>
    <string name="change">change</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="dayTemperature">Day Temperature</string>
    <string name="nightTemperature">Night Temperature</string>
    <string name="windowOpenTemp">Window Open Temp.</string>
    <string name="widgetToggle">AndFHEM Toggle</string>
    <string name="deviceNotFound">Device %1$s was not found.</string>
    <string name="billing_notSupported">Cannot connect to Google Billing.</string>
    <string name="billing_restoringTransactions">Restoring transactions ...</string>
    <string name="billing_state_pending">Waiting for the current transaction to complete ...</string>
    <string name="billing_state_bought">Thanks for buying andFHEM Premium!</string>
    <string name="premium">AndFHEM Premium</string>
    <string name="premium_desc">AndFHEM Premium includes the shutdown of advertisements within the app!</string>
    <string name="shop_buyPemium">Buy andFHEM Premium</string>
    <string name="blank"></string>
    <string name="deviceListEmpty">No matching devices found!</string>
    <string name="widget_small">andFHEM Small</string>
    <string name="widget_medium">andFHEM Middle</string>
    <string name="widget_big">andFHEM Big</string>
    <string name="widget_type_selection">Widget Type</string>
    <string name="widget_devicelist_empty">Sorry! No widget is available for your devices!</string>
    <string name="widget_temperature">Temperature</string>
    <string name="widget_toggle">Toggle</string>
    <string name="widget_status">State</string>
    <string name="widget_information">Information</string>
    <string name="widget_weather_forecast">Weather Forecast</string>
    <string name="timer">Timer</string>
    <string name="timer_overview">Switch %1$s %2$s %3$s %4$s to %5$s.</string>
    <string name="timer_overview_every_day">every day</string>
    <string name="timer_overview_once">once</string>
    <string name="timer_overview_weekend">at the weekend</string>
    <string name="timer_overview_weekday">on a weekday</string>
    <string name="timer_overview_at">at</string>
    <string name="timer_overview_every">every</string>
    <string name="timer_name">Timer name</string>
</resources>