<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:id="@+id/deviceType"
              android:textColor="#b84100"
              android:textSize="20dp"
              android:paddingLeft="3dp"
              android:text="@string/generalDetails"
              android:layout_marginBottom="0dp"
              android:layout_marginTop="3dp"
            />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:stretchColumns="1"
                 android:paddingBottom="5dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
            >

        <TableRow>
            <TextView android:text="@string/temperature"
                      android:layout_column="1" />
            <TextView android:id="@+id/temperature"
                      android:text="xx °C"
                      android:gravity="right"/>
        </TableRow>

        <TableRow>
            <TextView android:text="@string/wind"
                      android:layout_column="1" />
            <TextView android:id="@+id/wind"
                      android:text="xx km/h"
                      android:gravity="right"/>
        </TableRow>

        <TableRow>
            <TextView android:text="@string/rain"
                      android:layout_column="1" />
            <TextView android:id="@+id/rain"
                      android:text="xx l"
                      android:gravity="right"/>
        </TableRow>

        <TableRow>
            <TextView android:text="@string/humidity"
                      android:layout_column="1" />
            <TextView android:id="@+id/humidity"
                      android:text="xx %"
                      android:gravity="right"/>
        </TableRow>

        <TableRow>
            <TextView android:text="@string/isRaining"
                      android:layout_column="1" />
            <TextView android:id="@+id/isRaining"
                      android:text="xx (yes/no)"
                      android:gravity="right"/>
        </TableRow>

        <TableRow>
            <TextView android:text="@string/avgDay"
                      android:layout_column="1" />
            <TextView android:id="@+id/avgDay"
                      android:text="T: x.x  H: x  W: x.x  R: xx.x"
                      android:gravity="right"/>
        </TableRow>

        <TableRow>
            <TextView android:text="@string/avgMonth"
                      android:layout_column="1" />
            <TextView android:id="@+id/avgMonth"
                      android:text="T: x.x  H: x  W: x.x  R: xx.x"
                      android:gravity="right"/>
        </TableRow>

    </TableLayout>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20dp"
                  android:orientation="vertical"
                  android:id="@+id/graphLayout">

        <TextView android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:id="@+id/deviceType"
                  android:textColor="#b84100"
                  android:textSize="20dp"
                  android:paddingLeft="3dp"
                  android:text="@string/plots"
                  android:layout_marginBottom="3dp"
                  android:layout_marginTop="3dp"
                />

        <Button android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperatureGraph"
                android:id="@+id/temperatureGraph"
                android:layout_marginLeft="10dp"/>
        <Button android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/rainGraph"
                android:id="@+id/rainGraph"
                android:layout_marginLeft="10dp"/>
        <Button android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/humidityGraph"
                android:id="@+id/humidityGraph"
                android:layout_marginLeft="10dp"/>
        <Button android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/windGraph"
                android:id="@+id/windGraph"
                android:layout_marginLeft="10dp"/>
    </LinearLayout>
</LinearLayout>