<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <TextView style="@style/deviceDetailSectionCaption"
              android:text="@string/generalDetails" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 style="@style/deviceDetailTable">

        <TableRow android:id="@+id/tableRowRoom">
            <TextView android:text="@string/room"
                      style="@style/deviceDetailDescription" />
            <TextView android:id="@+id/room"
                      android:text="xxxxx"
                      style="@style/deviceDetailContent" />
        </TableRow>

        <TableRow android:id="@+id/tableRowMeasured">
            <TextView android:text="@string/measured"
                      style="@style/deviceDetailDescription" />
            <TextView android:id="@+id/measured"
                      android:text="xx.xx.xxxx xx:xx"
                      style="@style/deviceDetailContent" />
        </TableRow>

        <TableRow android:id="@+id/tableRowState">
            <TextView android:text="@string/state"
                      style="@style/deviceDetailDescription" />
            <TextView android:id="@+id/state"
                      style="@style/deviceDetailContent"
                      android:text="xx"/>
        </TableRow>

        <TableRow android:id="@+id/switchSeekBarRow">
            <TextView android:text="@string/switchDevice"
                      style="@style/deviceDetailDescription" />
            <SeekBar  android:id="@+id/seekBar"
                      style="@style/deviceDetailContentSeek" />

        </TableRow>

        <TableRow android:id="@+id/switchToggleButtonRow">
            <TextView android:text="@string/switchDevice"
                      style="@style/deviceDetailDescription" />
            <ToggleButton android:id="@+id/switchButton"
                          style="@style/deviceDetailContentToggle"
                          android:onClick="onFS20Click"/>
        </TableRow>

        <Button android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/switchSetOptions"
                android:id="@+id/switchSetOptions"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"/>
    </TableLayout>
</LinearLayout>