<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             style="@style/deviceOverviewTable"
             android:background="@drawable/ks300_background">

    <TableRow>
        <TextView android:id="@+id/deviceName"
                  style="@style/deviceOverviewCaption" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/temperature"
                  style="@style/deviceOverviewDescription"/>
        <TextView android:id="@+id/temperature"
                  android:text="xx (Celsius)"
                  style="@style/deviceOverviewContent"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/wind"
                  style="@style/deviceOverviewDescription"/>
        <TextView android:id="@+id/wind"
                  style="@style/deviceOverviewContent"
                  android:text="xx (km/h)"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/rain"
                  style="@style/deviceOverviewDescription"/>
        <TextView android:id="@+id/rain"
                  style="@style/deviceOverviewContent"
                  android:text="xx (l)" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/humidity"
                  style="@style/deviceOverviewDescription"/>
        <TextView android:id="@+id/humidity"
                  style="@style/deviceOverviewContent"
                  android:text="xx (%)"/>
    </TableRow>
</TableLayout>